# db-migrations-showcase

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
.github/workflows/: alembic.yml  flyway.yml
alembic/: alembic.ini  env.py  script.py.mako
alembic/versions/: 0001_create_users.py  0002_add_email_index.py  0003_add_posts_table.py
docker/: docker-compose.yml
flyway/conf/: flyway.toml
flyway/sql/: V1__create_users.sql  V2__add_email_index.sql  V3__add_posts_table.sql
scripts/: reset_db.ps1  run_alembic.ps1  run_flyway.ps1
tests/: test_alembic_migrations.py  test_flyway_migrations.py
